--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.26MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-4.10MB/s(Youtube:不良林), server: 116.129.254.192, port: 16113, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-181.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2, server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-7.17MB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.71MB/s(Youtube:不良林), server: 120.241.236.113, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-797.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-550.2KB/s(Youtube:不良林), server: 120.233.150.132, port: 16129, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.05MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-2.41MB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-497.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-724.0KB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-701.1KB/s(Youtube:不良林), server: 103.182.17.46, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.182.17.46}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-181.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
+      - 未知国家-701.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-181.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
+      - 未知国家-701.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-181.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
+      - 未知国家-701.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-181.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
+      - 未知国家-701.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-181.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
+      - 未知国家-701.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-181.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
+      - 未知国家-701.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-181.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
+      - 未知国家-701.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
