--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-797.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-550.2KB/s(Youtube:不良林), server: 120.233.150.132, port: 16129, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.05MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-2.41MB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-497.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-724.0KB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-701.1KB/s(Youtube:不良林), server: 103.182.17.46, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.182.17.46}}
+  - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-385.2KB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.23MB/s(Youtube:不良林), server: 116.129.254.192, port: 16251, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-399.4KB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11187, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.93MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-11.67MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11211, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.37MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11180, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-16.54MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11174, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.78MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11191, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-14.11MB/s(Youtube:不良林), server: 36.139.153.214, port: 45251, type: ss, cipher: chacha20-ietf-poly1305, password: 87e5ef91-0cae-4454-9f95-a402c75c0dfa}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
-      - 未知国家-701.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
-      - 未知国家-701.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
-      - 未知国家-701.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
-      - 未知国家-701.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
-      - 未知国家-701.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
-      - 未知国家-701.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-797.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-550.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-497.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-724.0KB/s(Youtube:不良林)
-      - 未知国家-701.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
