--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-385.2KB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.23MB/s(Youtube:不良林), server: 116.129.254.192, port: 16251, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-399.4KB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11187, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.93MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇳 中国-11.67MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11211, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.37MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11180, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-16.54MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11174, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-13.78MB/s(Youtube:不良林), server: sz-cm-kl.hinetwork.tw, port: 11191, type: trojan, password: 258f1db1-a4bc-3cab-ac7b-0ebc681c0580, sni: sz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-14.11MB/s(Youtube:不良林), server: 36.139.153.214, port: 45251, type: ss, cipher: chacha20-ietf-poly1305, password: 87e5ef91-0cae-4454-9f95-a402c75c0dfa}
+  - {name: 🇨🇦 加拿大-2.33MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-610.0KB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.25MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-467.2KB/s(Youtube:不良林), server: 120.241.236.113, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-481.6KB/s(Youtube:不良林), server: 120.241.236.215, port: 16223, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-494.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-467.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-5.00MB/s(Youtube:不良林), server: 116.129.254.192, port: 16249, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: 116.129.254.192, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-799.5KB/s(Youtube:不良林), server: 120.241.236.216, port: 16247, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
