--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.33MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-610.0KB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.25MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-467.2KB/s(Youtube:不良林), server: 120.241.236.113, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-481.6KB/s(Youtube:不良林), server: 120.241.236.215, port: 16223, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-494.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-467.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-5.00MB/s(Youtube:不良林), server: 116.129.254.192, port: 16249, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: 116.129.254.192, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-799.5KB/s(Youtube:不良林), server: 120.241.236.216, port: 16247, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 134.195.196.89, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-349.0KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇦 加拿大-380.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.48MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.89, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 134.195.196.89, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 134.195.196.89, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-2.49MB/s(Youtube:不良林), server: 134.195.196.89, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.66MB/s(Youtube:不良林), server: 134.195.196.89, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-610.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-467.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
